Fixed odd spacing on resize

--- a/src/frontend/css/common.css
+++ b/src/frontend/css/common.css
@@ -79,7 +79,7 @@ body {
 }
 
 #current-file-controls button {
-  font-size: 1.25em;
+  font-size: 1.2em;
   padding-top: 0;
   padding-left: 0;
   padding-right: 5px;
